# backlog-ai-bot-lambda

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: DESIGN.md
scripts/: build_zip.sh
src/backlog_bot/: __init__.py  backlog.py  commands.py  config.py  context_fetch.py  handler.py  idempotency.py  llm.py
tests/: conftest.py  test_commands.py  test_context.py  test_handler_ask_contact.py  test_handler_failure.py  test_handler_labelized_content.py  test_handler_labelized_toplevel_key.py  test_handler_payload_shape.py  test_handler_unit.py  test_handler_wiki_context.py
