[project]
name = "backlog-ai-bot-lambda"
version = "0.1.0"
description = "Backlog AI bot on AWS Lambda + Bedrock Claude (minimal, RAG-less)"
readme = "README.md"
authors = [
  { name = "satoooh" }
]
requires-python = ">=3.11,<3.14"
dependencies = [
  # Keep runtime deps minimal; rely on Lambda's managed boto3
]

[dependency-groups]
dev = [
  "pytest>=8.2",
  "ruff>=0.6.8",
]

[tool.uv]
# Use uv to manage and run tools

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
  "E", "F", "I", "UP", "B"
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
